<resources>
    <string name="app_name">WanAndroidTest</string>
    <string name="loading_name">正在请求网络</string>
    <string name="welcome_message">立即进入</string>
    <string name="bottom_name1">首页</string>
    <string name="bottom_name2">项目</string>
    <string name="bottom_name3">广场</string>
    <string name="bottom_name4">公众号</string>
    <string name="bottom_name5">我的</string>
    <string name="confirm">确定</string>
    <string name="cancel">取消</string>
    <string name="done">完成</string>
    <string name="place_login">请登录~</string>
    <string name="my_credits">我的积分</string>
    <string name="now_credits">当前积分:</string>
    <string name="my_collect">我的收藏</string>
    <string name="my_article">我的文章</string>
    <string name="my_task">我的任务</string>
    <string name="my_join">加入我们</string>
    <string name="my_set">系统设置</string>
    <string name="my_url">开源网站</string>
    <string name="login">登录</string>
    <string name="account_number">账号</string>
    <string name="password">密码</string>
    <string name="go_register">去注册</string>
    <string name="register_login">注册并登录</string>
    <string name="title_activity_fullscreen">FullscreenActivity</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
    <string name="collect_user_name">匿名用户</string>
    <string name="collect_user_time">用户添加的时间</string>
    <string name="collect_top">置顶</string>
    <string name="collect_new">新</string>
    <string name="collect_type">类型</string>
    <string name="collect_time">添加的时间</string>
    <string name="collect_message">这是一个根据JetpackMvvm框架开发玩Android的一个APP</string>
    <string name="collect_url">https:\/\/www.wanandroid.com\/blog\/show\</string>
    <string name="project_title">这是一个菜的扣jio的人写的项目</string>
    <string name="project_message">一个Jetpack结合MVVM的快速开发框架，基于MVVM模式集成谷歌官方推荐的JetPack组件库：LiveData、ViewModel、Lifecycle组件
        使用Kotlin语言，添加大量拓展函数，简化代码 加入Retrofit网络请求,协程，帮你简化各种操作，让你快速开发项目</string>
    <string name="hot_search_items">热门搜索</string>
    <string name="search_history">搜索历史</string>
    <string name="remove_history">清空</string>
    <string name="title_activity_settings_fragment">SettingsFragment</string>

    <!-- Preference Titles -->
    <string name="messages_header">基本设置</string>
    <string name="message_header2">其他设置</string>
    <string name="message_header3">关于</string>
    <!-- Messages Preferences -->
    <string name="setting_topTitle">显示指定文章</string>
    <string name="setting_topTip">开启后首页会显示置顶文章</string>
    <string name="setting_clearCache">清除缓存</string>
    <string name="setting_out">退出</string>
    <string name="setting_outLogin">退出登录</string>
    <string name="setting_listAnimation">列表动画</string>
    <string name="setting_listAnimationMessage">动画信息</string>
    <string name="setting_">列表动画</string>
    <string name="setting_themeColor">主题颜色</string>
    <string name="setting_themeColorMessage">颜色</string>
    <string name="setting_version">版本</string>
    <string name="setting_nowVersion">当前版本</string>
    <string name="setting_author">作者</string>
    <string name="setting_authorName">菜的抠脚的安卓开发</string>
    <string name="setting_sourceCode">项目源码</string>
    <string name="setting_sourceCodeUrl">https://github.com/ewrqa/WanAndroidTest</string>
    <string name="setting_copyright">版权</string>
    <string name="setting_copyright2">没有版权随便玩</string>

    <!-- Sync Preferences -->
    <string name="sync_title">Sync email periodically</string>
    <string name="attachment_title">Download incoming attachments</string>
    <string name="attachment_summary_on">Automatically download attachments for incoming emails
    </string>
    <string name="attachment_summary_off">Only download attachments when manually requested</string>
    <string name="title_activity_settings">SettingsActivity</string>
</resources>