<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_marginLeft="8dp"
    android:layout_marginRight="8dp"
    android:background="@color/white"
    android:foreground="?android:attr/selectableItemBackground"
    app:cardCornerRadius="4dp"
    app:cardElevation="4dp"
    >
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView
            android:id="@+id/item_project_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="12dp"
            android:textSize="13sp"
            android:textColor="@color/colorBlack666"
            android:text="@string/collect_user_name"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            />
        <TextView
            android:id="@+id/item_project_top"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:paddingLeft="3dp"
            android:paddingRight="3dp"
            android:textSize="11sp"
            android:textColor="@android:color/holo_red_light"
            android:text="@string/collect_top"
            app:layout_constraintTop_toTopOf="@id/item_project_name"
            app:layout_constraintBottom_toBottomOf="@id/item_project_name"
            app:layout_constraintStart_toEndOf="@id/item_project_name"
            />

        <TextView
            android:id="@+id/item_project_new"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:paddingLeft="3dp"
            android:paddingRight="3dp"
            android:textSize="11sp"
            android:textColor="@android:color/holo_red_light"
            android:text="@string/collect_new"
            app:layout_constraintTop_toTopOf="@id/item_project_top"
            app:layout_constraintBottom_toBottomOf="@id/item_project_top"
            app:layout_constraintStart_toEndOf="@id/item_project_top"
            />

        <TextView
            android:id="@+id/item_project_type"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:textSize="11sp"
            android:textColor="@android:color/holo_green_dark"
            android:text="@string/collect_type"
            app:layout_constraintTop_toTopOf="@id/item_project_new"
            app:layout_constraintBottom_toBottomOf="@id/item_project_new"
            app:layout_constraintStart_toEndOf="@id/item_project_new"
            />

        <TextView
            android:id="@+id/item_project_time"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:textSize="11sp"
            android:textColor="@color/colorBlack666"
            android:text="@string/collect_time"
            app:layout_constraintBottom_toBottomOf="@id/item_project_name"
            app:layout_constraintTop_toTopOf="@id/item_project_name"
            app:layout_constraintEnd_toEndOf="parent"
            />

        <RelativeLayout
            android:id="@+id/item_project_re"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:layout_marginStart="8dp"
            app:layout_constraintTop_toBottomOf="@+id/item_project_name"
            >
            <ImageView
                android:id="@+id/item_project_image"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:scaleType="centerCrop"
                android:src="@drawable/default_project_img"
                />
            <TextView
                android:id="@+id/item_project_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/project_title"
                android:textColor="@color/black"
                android:textStyle="bold"
                android:textSize="14sp"
                android:ellipsize="end"
                android:maxLines="2"
                android:layout_toRightOf="@+id/item_project_image"
                android:layout_marginStart="8dp"
                />

            <TextView
                android:id="@+id/item_project_message"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/project_message"
                android:textColor="@color/colorBlack666"
                android:textSize="13sp"
                android:ellipsize="end"
                android:maxLines="3"
                android:lineSpacingMultiplier="1.4"
                android:layout_marginEnd="8dp"
                android:layout_marginTop="8dp"
                android:layout_below="@+id/item_project_title"
                android:layout_toRightOf="@+id/item_project_image"
                android:layout_marginStart="8dp"
                />
        </RelativeLayout>

        <TextView
            android:id="@+id/item_project_types"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:layout_marginBottom="12dp"
            android:text="@string/collect_type"
            android:textColor="@color/colorBlack666"
            android:textSize="11sp"
            app:layout_constraintTop_toBottomOf="@+id/item_project_re"
            app:layout_constraintStart_toStartOf="@+id/item_project_re"
            app:layout_constraintBottom_toBottomOf="parent"
            />

        <com.example.wanandroidtest.weight.custom.CollectView
            android:id="@+id/item_project_collect"
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:layout_marginEnd="8dp"
            app:layout_constraintTop_toBottomOf="@+id/item_project_re"
            app:layout_constraintBottom_toBottomOf="@+id/item_project_types"
            app:layout_constraintEnd_toEndOf="parent"
            />

    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.cardview.widget.CardView>