<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:bind="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <data>
        <variable
            name="viewmodel"
            type="com.example.wanandroidtest.viewmodel.state.loginregister.LoginViewModel" />
        <variable
            name="click"
            type="com.example.wanandroidtest.ui.activity.loginregister.LoginActivity.ProxyCClick" />
    </data>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <include layout="@layout/include_toolbar" android:id="@+id/login_toolbar"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="18dp"
            android:layout_marginRight="18dp"
            android:orientation="vertical">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="48dp"
                android:src="@mipmap/ic_launcher" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:layout_marginTop="65dp"
                android:background="@drawable/edit_shape">

                <EditText
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_gravity="center"
                    android:layout_weight="1"
                    android:background="@null"
                    android:hint="@string/account_number"
                    android:maxLength="6"
                    android:maxLines="1"
                    android:inputType="text"
                    android:text="@={viewmodel.username}"
                    android:paddingLeft="10dp" />

                <ImageView
                    android:layout_width="24dp"
                    android:layout_height="24dp"
                    android:layout_gravity="center"
                    android:layout_marginRight="6dp"
                    android:onClick="@{()->click.clear()}"
                    android:visibility="@{viewmodel.clearVisible}"
                    android:src="@drawable/ic_clear" />
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:layout_marginTop="50dp"
                android:background="@drawable/edit_shape">
                <EditText
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_gravity="center"
                    android:layout_weight="1"
                    android:background="@null"
                    android:hint="@string/password"
                    android:maxLength="10"
                    android:maxLines="1"
                    android:inputType="textPassword"
                    android:text="@={viewmodel.password}"
                    android:paddingLeft="10dp"
                    bind:showPwd="@{viewmodel.showPwd}"
                    />
                <CheckBox
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginRight="6dp"
                    android:checked="false"
                    android:button="@drawable/keyvisibily_selector"
                    bind:checkChange="@{click.onCheckedChangeListener}"
                    android:visibility="@{viewmodel.passwordVisible}" />
            </LinearLayout>
            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="30dp"
                android:background="@drawable/button_background"
                android:text="@string/login"
                android:onClick="@{()->click.login()}"
                android:textColor="@color/white"
                android:textSize="16sp" />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="right"
                android:layout_marginTop="20dp"
                android:paddingTop="15dp"
                android:paddingRight="15dp"
                android:paddingBottom="15dp"
                android:text="@string/go_register"
                android:textColor="@color/colorAccent"
                android:onClick="@{()->click.goRegister()}"
                android:textSize="10sp" />
        </LinearLayout>
    </LinearLayout>
</layout>